...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TrackCreateFragment"
    android:padding="20dp"
    android:id="@+id/fragmentAddTrack">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center"
        style="@style/Title"
        android:text="@string/add_track"
...
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:padding="10dp"
            android:text="Añadir"/>
    </LinearLayout>
...
