<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="album" type="com.miso.vinilos.models.Album"/>
    </data>

    <LinearLayout
        android:id="@+id/aly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:contentDescription="@string/albumnImageContentDescription"
                android:scaleType="centerCrop"
                app:setImageUrl="@{album.cover}" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView6"
            style="@style/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{album.name}" />
    </LinearLayout>
</layout>