<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/artistsFragment"
        android:contentDescription="seccion artistas"
        android:icon="@drawable/ic_user"
        android:title="@string/artists" />

    <item
        android:id="@+id/collectorsFragment"
        android:contentDescription="seccion coleccionistas"
        android:icon="@drawable/ic_collectors"
        android:title="@string/collectors" />

    <item
        android:id="@+id/albumsFragment"
        android:contentDescription="seccion albums"
        android:icon="@drawable/ic_albums"
        android:title="@string/albums" />
</menu>