...
                    android:fontFamily="@font/roboto"
                    android:text="@{collectorDetail.email}" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/data">
            <TextView
...
